# chk_common

./: .gitmodules  CMakeLists.txt  README.md
cmake/: LinkCWalk.cmake
include/: chk_common.h  chk_io.h
src/: chk_common.c  chk_io.c
src/common/: args.hpp  common.cpp  common.hpp  detect_os.hpp  file.cpp  file.hpp  function.hpp  interop.cpp  interop.hpp  list.hpp  logging.cpp  logging.hpp  memory.hpp  platform.hpp  types.hpp  utils.hpp
